fix shadow cut off on wpforms

--- a/config/reach/config.scss
+++ b/config/reach/config.scss
@@ -68,7 +68,7 @@ textarea {
 	}
 }
 
-.wpforms-container.inline-fields {
+.site-container .wpforms-container.inline-fields {
 	margin-bottom: 0;
 	overflow: visible;
 
